# gh-military-crawler

./: .env.example  .gitignore  README.md  main.py  proof_of_concept.md  pyproject.toml  requirements.txt
data/: aircraft.txt  data.py  military_names.txt  other.txt
individual project - open-source military crawler/: Proof of concept.md
src/: builder.py  constants.py  data.py  github_wrapper.py  languages_dict.py  main.py  utils.py
