[tool.poetry]
name = "gh-military-crawler"
version = "0.1.0"
description = ""
authors = ["Tomasz Miśkowicz <tomasz.jan.miskowicz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pygithub = "^2.1.1"
# data from wikipedia
bs4 = "^0.0.1"

# TODO check pycld2/3 instead of langdetect (https://github.com/aboSamoor/pycld2/issues/43)
#pycld2 = "^0.41"
langid = "^1.1.6"
langdetect = "^1.0.9"
translate = "^3.6.1"
pypdf = "^3.17.4"
# TODO what was it
transliterate = "^1.10.2"


# OCR
# alternatively: https://github.com/JaidedAI/EasyOCR
pytesseract = "^0.3.10"
pillow = "^10.2.0"
opencv-python = "^4.9.0.80"
pdf2image = "^1.17.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.1"
pylint = "^3.0.3"
pyright = "^1.1.344"
poethepoet = "^0.24.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


#############    POE COMMANDS

[tool.poe.tasks]
lint = "pylint src"
format.shell = "isort . && black ."
typecheck = "pyright src"
format_check = "isort --check . && black --check ."

fmt.sequence = ["lint", "format", "typecheck"]
fmt.ignore_fail = true
